--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-react-dnd</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="main.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>vue-react-dnd</title><link href=css/style.min.css?ea4685a289923ae746a7342f835ec054 rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=main.min.js?d8cd0a474f3238025531></script></body></html>
